include(CommonModularInterface)

GENERATE_MODULAR_TARGET(csharp ${CMAKE_CURRENT_SOURCE_DIR} "")

ADD_CUSTOM_COMMAND(TARGET csharp_modular
				   POST_BUILD
				   COMMAND "${CSHARP_COMPILER}" /t:library *.cs /out:modshogun.dll
				   COMMENT "Creating modshogun.dll")
IF(NOT CSHARP_INSTALL_DIR)
	SET(CSHARP_INSTALL_DIR "lib/cli/shogun")
ENDIF(NOT CSHARP_INSTALL_DIR)

SET(CSHARP_MODULAR_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
INSTALL(TARGETS csharp_modular
	LIBRARY DESTINATION ${CSHARP_INSTALL_DIR}
	COMPONENT csharp)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/modshogun.dll
		DESTINATION ${CSHARP_INSTALL_DIR}
		COMPONENT csharp)
