FIND_PACKAGE(GO REQUIRED)

include(ShogunInterfaces)

if (${GO_VERSION} VERSION_GREATER 1.2)
	LIST(APPEND TARGET_SWIGFLAGS -cgo)
endif()

# intsize
LIST(APPEND TARGET_SWIGFLAGS -intgosize)
IF(CMAKE_SIZEOF_VOID_P EQUAL 8)
	LIST(APPEND TARGET_SWIGFLAGS 64)
ELSE()
	LIST(APPEND TARGET_SWIGFLAGS 32)
ENDIF()

GENERATE_INTERFACE_TARGET(go ${CMAKE_CURRENT_SOURCE_DIR} "")

SET(INTERFACE_GO_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
