include(CommonModularInterface)
include_directories(${JNI_INCLUDE_DIRS})

GENERATE_MODULAR_TARGET(java ${CMAKE_CURRENT_SOURCE_DIR} "")

set(CMAKE_JAVA_TARGET_OUTPUT_NAME shogun)
SET(CMAKE_JAVA_INCLUDE_PATH ${JBLAS})
ADD_JAR(shogun_jar ${CMAKE_CURRENT_BINARY_DIR}/*.java)
add_dependencies(shogun_jar java_modular)

INSTALL(TARGETS java_modular
	LIBRARY DESTINATION lib/jni
	COMPONENT java)

SET(SHOGUN_JAR "${CMAKE_CURRENT_BINARY_DIR}/shogun.jar" PARENT_SCOPE)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/shogun.jar
		DESTINATION share/java
		COMPONENT java)

set(CPACK_COMPONENT_JAVA_DISPLAY_NAME "Java interface" PARENT_SCOPE)
set(CPACK_COMPONENT_JAVA_DESCRIPTION "Java modular interface of Shogun" PARENT_SCOPE)
set(CPACK_COMPONENT_JAVA_GROUP "Runtime" PARENT_SCOPE)
set(CPACK_COMPONENT_JAVA_DEPENDS libraries PARENT_SCOPE)
SET(CPACK_COMPONENTS_ALL ${CPACK_COMPONENTS_ALL} java PARENT_SCOPE)
